interface.css
:root {
	--bg-color: #ffffff;
	--outline-color: #000000;
	--text-color: #000000;
	--fill-color: #cccccc;

	--btn-bg-on: #eeeeee;
	--btn-bg-hover: #f9f9f9;
	--btn-bg-active: #cccccc;
	--btn-outline-hover: #222222;
	--btn-outline-active: #222222;
}

* {
	font-family: "Inconsolata", "Consolas", monospace;
	color: var(--text-color);
	touch-action: manipulation;
}

body {
	min-width: 100px;
	background-color: var(--bg-color);
	margin-left: 15px;
}

div {
	touch-action: manipulation;
}

hr {
	margin-top: 4px;
	margin-bottom: 3px;
	border: 1px solid var(--outline-color);
	background-color: var(--outline-color);
}

div.scroll {
	overflow: auto;
	border: 1px solid #000;
}

.button {
	font-size: 13px;
	border-radius: 5px;
	border: 1px solid var(--outline-color);
	outline: none;
	background: var(--btn-bg-on);

	margin-top: 3px;
	margin-bottom: 3px;
	padding: 2px 4px;

	touch-action: manipulation;
}

.button:hover {
	background: var(--btn-bg-hover);
	border: 1px solid var(--btn-outline-hover);
	cursor: pointer;
}

.button:active {
	background: var(--btn-bg-active);
	border: 1px solid var(--btn-outline-active);
}

.button:disabled {
	opacity: 0.6;
	border: 1px solid #555;
	cursor: auto;
}

.projectButton {
	font-size: 13px;
	border-radius: 10px;
	border: 1px solid var(--outline-color);
	outline: none;
	background: var(--btn-bg-on);
	display: block;

	height: 70px;
	width: 100%;
	margin-top: 10px;

	touch-action: manipulation;
}

.projectButton:hover {
	background: var(--btn-bg-hover);
	border: 1px solid var(--btn-outline-hover);
	cursor: pointer;
}

.projectButton:active {
	background: var(--btn-bg-active);
	border: 1px solid var(--btn-outline-active);
}

.projectButton:disabled {
	opacity: 0.6 !important;
	border: 1px solid #555;
	cursor: auto;
}

.pulsate {
	-webkit-animation: pulsate 0.7s ease-out;
	-webkit-animation-iteration-count: infinite;
	opacity: 0.0;
}

.toolTip {
	position: relative;
	display: inline-block;
}

.toolTip .toolTipText {
	visibility: hidden;
	width: 160px;
	background-color: #c8c8c8;
	color: #000;
	text-align: center;
	padding: 5px 0;
	border-radius: 10px;
	margin-bottom: 13px;

	position: absolute;
	z-index: 1;
	bottom: 75%;
	left: 50%;
	margin-left: 0px;

	opacity: 0;
	transition: opacity 1s;
}

.toolTip:hover .toolTipText {
	visibility: visible;
	opacity: 1;
}

#consoleDiv {
	width: 100%;
	height: 100px;
	margin-top: 40px;
}

div#consoleMsg {
	overflow: hidden;
	margin-bottom: 5px;
}

div#readoutDiv {
	margin-top: 10px;
	font-size: 90%;
	padding: 5px;
	height: 100%;
	border: 1px solid var(--outline-color);
}

#fundsDiv {
	margin-top: 30px;
}

#column0 {
	float: left;
	width: 275px;
	margin-right: 15px;
	margin-bottom: 10px;
}

#column1 {
	float: left;
	width: 275px;
	margin-right: 15px;
	margin-bottom: 10px;
}

#column2 {
	float: left;
	width: 275px;
	margin-right: 15px;
	margin-bottom: 10px;
}

#projectsColumn {
	float: right;
	width: 275px;
	margin-right: 15px;
}

#menuDiv {
	position: fixed;
	top: 0;
	right: 0;
	margin-left: 8px;
	margin-top: 5px;
	margin-right: 8px;
}

#happinessDiv {
	width: 275px;
}

#happinessProgress {
	width: 275px;
	height: 15px;
	background-color: var(--bg-color);
	border: 1px solid var(--outline-color);
	margin-top: 5px;
}

#happinessMeter {
	height: 100%;
	background-color: var(--fill-color);
	border: none;
}

@media only screen and (max-width: 892px) {
	#projectsColumn {
		float: left;
	}
}

@media only screen and (max-width: 550px) {

	#column0,
	#column1,
	#column2,
	#column3,
	#projectsColumn {
		width: 96%;
	}

	#consoleDiv {
		width: 96%;
	}

	#menuDiv {
		margin-right: 6%;
	}
}

